--- a/9_CssBackgroundWork/css/lessonStyle.css
+++ b/9_CssBackgroundWork/css/lessonStyle.css
@@ -1,52 +1,103 @@
 /* Применяется ко всем элементам страницы */
 * {
-    padding: 0;
-    margin: 0;
-    border: 0;
+	padding: 0;
+	margin: 0;
+	border: 0;
 }
 
 /* Меняется подсчет ширины блока в браузерах для удобства верстки */
-*, *:before, *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+*,
+*:before,
+*:after {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /* Убираем линии обводки элементов при фокусе у браузеров */
-:focus, :active {outline: none;}
-a:focus, a:active {outline: none;}
+:focus,
+:active {
+	outline: none;
+}
+a:focus,
+a:active {
+	outline: none;
+}
 
 /* Делаем теги HTML5 блочными */
-nav, footer, header, aside {display: block;}
+nav,
+footer,
+header,
+aside {
+	display: block;
+}
 
 /* Запрет на непроизвольное изменение шрифта в браузерах */
-html, body {
-    height: 100%;
-    width: 100%;
-    font-size: 100%;
-    line-height: 1;
-    font-size: 14px;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+html,
+body {
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 14px;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
 }
 
 /* Включаем у элементов форм наследование шрифта, по умолчанию не наследуют его */
-input, button, textarea {font-family: inherit;}
+input,
+button,
+textarea {
+	font-family: inherit;
+}
 
 /* Убираем стили ссылок, списков, кнопок и т.д. */
-input::-ms-clear {display: none;}
-button {cursor: pointer;}
-button::-moz-focus-inner {padding:0; border:0;}
-a, a:visited {text-decoration: none;}
-a:hover {text-decoration: none;}
-ul li {list-style: none;}
-img {vertical-align: top;}
+input::-ms-clear {
+	display: none;
+}
+button {
+	cursor: pointer;
+}
+button::-moz-focus-inner {
+	padding: 0;
+	border: 0;
+}
+a,
+a:visited {
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: none;
+}
+ul li {
+	list-style: none;
+}
+img {
+	vertical-align: top;
+}
 
 /* Обнуляем стили заголовков h1-h6 */
-h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: inherit;
+	font-weight: 400;
+}
 
 /* -------------------------------------- */
-.block {
 
+body {
+	padding: 30px;
+}
+
+.block {
+	height: 300px;
+	border-radius: 15px;
+	box-shadow: 0 0 10px #000;
+	background: #31384e;
+	background: url(../img/FiredPanda.jpeg);
 }
