--- a/BEM_Metodology/css/lessonStyle.scss
+++ b/BEM_Metodology/css/lessonStyle.scss
@@ -5,14 +5,17 @@ body {
 	font-family: Lato;
 }
 
+/* Блок about */
 .about {
+	/* Элемент body */
 	&__body {
 	}
-
+	/* Элемент header */
 	&__header {
 	}
-
+	/* Элемент title */
 	&__title {
+		margin: 0px 0px 30px 0px;
 	}
 
 	&__text {
@@ -26,6 +29,24 @@ body {
 }
 
 .title {
+	font-size: 34px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 8.95px;
+
+	position: relative;
+	text-align: center;
+	padding: 0px 0px 30px 0px;
+	&:after {
+		content: "";
+		position: absolute;
+		width: 50px;
+		bottom: 0;
+		height: 1px;
+		left: 50%;
+		background-color: #000;
+		margin: 0px 0px 0px -25px;
+	}
 }
 
 .item-about {
